<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    android:id="@+id/main">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Scheduling Algorithms Overview"
        android:textSize="32dp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColor="#FED8B1"
        android:layout_marginTop="40dp"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/divider">
        <LinearLayout
            android:id="@+id/algorithms_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A1DD70"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="Non-Preemptive Scheduling Algorithms"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF9F66"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="1. First-Come, First-Served (FCFS)"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF9F66"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="2. Shortest Job First (SJF)"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_4"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF9F66"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="3. Priority Scheduling
"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_5"                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A1DD70"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="\nPreemptive Scheduling Algorithms"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_6"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF9F66"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="\n1. Round Robin (RR)"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_7"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF9F66"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="2. Preemptive Shortest Job First (SJF)"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_8"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF9F66"
                android:textStyle="bold"
                android:textSize="17dp"
                android:text="3. Preemptive Priority Scheduling
"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_9"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/algo_10"
                />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>