<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    android:id="@+id/main">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Future Updates"
        android:textSize="32dp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColor="#FED8B1"
        android:layout_marginTop="40dp"
        />
    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/divider">
        <LinearLayout
            android:id="@+id/algorithms_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/future_updates_1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A1DD70"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="\n1. Hybrid Algorithm Scheduling"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/future_updates_2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A1DD70"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="\n2. Comparative Analysis"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/future_updates_3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A1DD70"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="\n3. User Interface and Interaction:"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/future_updates_4"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:text="@string/future_updates_5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@id/divider"
                android:textColor="@color/deep_blue"
                android:textStyle="bold"
                android:textSize="19dp"
                android:text="\nAND MANY MORE\n"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>